# maap-py

./: .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.maap_py  MANIFEST.in  README.md  doc.txt  maap.cfg  pyproject.toml  requirements.txt  setup.py  test_ogc_functions.py
.github/: pull_request_template.md
.github/workflows/: build-pipeline.yml  docs.yml  release-created.yml
docs/: Makefile  conf.py  index.md  index.rst
docs/api/: aws.md  aws.rst  config.md  config.rst  dps.md  dps.rst  maap.md  maap.rst  profile.md  profile.rst  result.md  result.rst  secrets.md  secrets.rst
examples/: BrowseExample.ipynb  Search Collection - Basics-checkpoint.ipynb  Search Granule-checkpoint.ipynb
examples/.ipynb_checkpoints/: Search Collection - Basics-checkpoint-checkpoint.ipynb
maap/: AWS.py  Profile.py  Result.py  Secrets.py  __init__.py  config_reader.py  dps_job.py  errors.py  maap.py  test.py
maap/dps/: DpsHelper.py  dps_job.py  dps_job_model.py  execute_inputs.xml
maap/utils/: CMR.py  HTTPServerHandler.py  JobUtils.py  Presenter.py  TokenHandler.py  algorithm_utils.py  endpoints.py  job.py  requests_utils.py
test/: conftest.py  dps_test_algo_config.yaml  functional_test.py  register-algorithm.py  s3-upload-testfile2.txt  test_AWS.py  test_CMR.py  test_DPS.py  test_MAAP.py  test_Result.py  test_config_reader.py  test_ogc.py  test_ogc_functions.py
